--- a/Issue Tracking System/app/app.css
+++ b/Issue Tracking System/app/app.css
@@ -1,5 +1,11 @@
 /* app css stylesheet */
-
+body{
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  line-height: 1.42857143;
+  color: #ebebeb;
+  background-color: #2b3e50;
+}
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
@@ -32,3 +38,4 @@ form{
   margin-left: 2%;
   width: 20%;
 }
+
